--- a/skinali/index.html
+++ b/skinali/index.html
@@ -25,9 +25,8 @@
             </div>
             <!-- /.container -->
         </div>
+        <!-- /.menu -->
         <div class="navbar">
-           
-            <!-- /.menu -->
             <div class="container">
                 <div class="navbar-wrap">
                     <!-- ГАМБУРГЕР -->
@@ -78,11 +77,7 @@
         <!-- /.hero -->
     </header>
     <!-- /.header -->    
-
-
-
-
-
-
+<!-- Поключение виджета обратной связи через соцсети -->
+<script type="text/javascript" src="https://spikmi.com/Widget?Id=3294"></script>
 </body>
 </html>
