--- a/skinali/index.html
+++ b/skinali/index.html
@@ -76,7 +76,71 @@
         </div>
         <!-- /.hero -->
     </header>
-    <!-- /.header -->    
+    <!-- /.header --> 
+    
+    <main>
+        <section class="offer bg-secondary">
+            <div class="container">
+                <!-- по правилам БЭМ задаем отступы для элемента offer__block, 
+                    а все остальное задаем для offer-block как для блока  -->
+                <!-- блок - функционально независимый компонент, который может быть повторно 
+                    использован на любой странице сайта и в любой части документа -->
+                <div class="offer__block offer-block">
+                    <h2 class="offer__title">Оставьте заявку на расчет</h2>
+                    <span class="offer__subtitle">и получите скидку 30% на изготовление скинали или фартука
+                        для кухни</span>
+                    <form action="#" class="form offer__form">
+                        <!-- .form__row>.form__group*3>label.form__label+input.form__input -->
+                        <div class="form__row">
+                            <div class="form__group">
+                                <label for="" class="form__label">Вид стекла</label>
+                                <input type="text" class="input form__input">
+                            </div>
+                            <div class="form__group">
+                                <label for="" class="form__label">Ширина, см</label>
+                                <input type="text" class="input form__input">
+                            </div>
+                            <div class="form__group">
+                                <label for="" class="form__label">Высота, см</label>
+                                <input type="text" class="input form__input">
+                            </div>
+                        </div>
+                        <div class="form__row form__row-checkbox">
+                            <div class="form__checkbox">
+                                <input class="checkbox" type="checkbox" id="install">
+                                <label class="checkbox-label" for="install">
+                                    Монтаж
+                                </label>
+                            </div>
+                            <!-- /.form__checkbox -->
+                            <div class="form__checkbox">
+                                <input class="checkbox" type="checkbox" id="delivery">
+                                <label class="checkbox-label" for="delivery">
+                                    Доставка
+                                </label>
+                            </div>
+                            <!-- /.form__checkbox -->
+                        </div>    
+                        
+                        <div class="form__row">
+                            <div class="form__group">
+                                <input type="text" class="input form__input" placeholder="Ваше имя">
+                            </div>
+                            <div class="form__group">
+                                <input type="tel" class="input form__input" placeholder="Ваш телефон">
+                            </div>
+                            <div class="form__group">
+                                <input type="submit" class="button form__button" value="Получить скидку">
+                            </div>
+                        </div>
+                        <!-- /.form-row -->
+                    </form>    
+                </div>
+                <!-- /.offer__block offer-block -->
+            </div>
+            <!-- /.container -->
+        </section>
+    </main>
 <!-- Поключение виджета обратной связи через соцсети -->
 <script type="text/javascript" src="https://spikmi.com/Widget?Id=3294"></script>
 </body>
