--- a/skinali/index.html
+++ b/skinali/index.html
@@ -140,6 +140,53 @@
             </div>
             <!-- /.container -->
         </section>
+        <!-- /.offer -->
+<section class="features section">
+    <div class="container">
+        <h2 class="section-title section__title">Наши преимущества</h2>
+        <!-- .features-block>.features-block__item*6>img.features-block__image[src="img/features/features$.png"]+p.features-block__text|c -->
+        <div class="features-block">
+            <div class="features-block__item">
+                <img src="img/features/feature1.png" alt="Бесплатный дизайн-макет" class="features-block__image">
+                <p class="features-block__text">Бесплатный <br> дизайн-макет</p>
+                <!-- /.feature-block__text -->
+            </div>
+            <!-- /.feature-block__item -->
+            <div class="features-block__item">
+                <img src="img/features/feature2.png" alt="Пожизненная гарантия" class="features-block__image">
+                <p class="features-block__text">Пожизненная <br> гарантия</p>
+                <!-- /.feature-block__text -->
+            </div>
+            <!-- /.feature-block__item -->
+            <div class="features-block__item">
+                <img src="img/features/feature3.png" alt="Большой каталог изображений" class="features-block__image">
+                <p class="features-block__text">Большой каталог <br> изображений</p>
+                <!-- /.feature-block__text -->
+            </div>
+            <!-- /.feature-block__item -->
+            <div class="features-block__item">
+                <img src="img/features/feature4.png" alt="100% соблюдение сроков" class="features-block__image">
+                <p class="features-block__text">100% соблюдение <br> сроков</p>
+                <!-- /.feature-block__text -->
+            </div>
+            <!-- /.feature-block__item -->
+            <div class="features-block__item">
+                <img src="img/features/feature5.png" alt="Собственное производство" class="features-block__image">
+                <p class="features-block__text">Собственное <br> производство</p>
+                <!-- /.feature-block__text -->
+            </div>
+            <!-- /.feature-block__item -->
+            <div class="features-block__item">
+                <img src="img/features/feature6.png" alt=" Минимальная цена в городе от 1600 р метр" class="features-block__image">
+                <p class="features-block__text"> Минимальная цена в городе <br> от 1600 р метр</p>
+                <!-- /.feature-block__text -->
+            </div>
+            <!-- /.feature-block__item -->
+        </div>
+        <!-- /.features-block -->
+
+    </div>
+</section>
     </main>
 <!-- Поключение виджета обратной связи через соцсети -->
 <script type="text/javascript" src="https://spikmi.com/Widget?Id=3294"></script>
